# hospital-microservice/api/docs/swagger.yml
@@ -22,13 +22,13 @@ paths:
                   required: false
                   schema:
                       type: integer
-                  description: Offset for pagination.
+                  description: Offset for pagination. If this field will be empty => by default 0(c начала)
                 - name: count
                   in: query
                   required: false
                   schema:
                       type: integer
-                  description: Number of hospitals to retrieve.
+                  description: Number of hospitals to retrieve. If this field will be empty => by default 10
             responses:
                 "200":
                     description: A list of hospitals.
@@ -37,7 +37,11 @@ paths:
                             schema:
                                 type: array
                                 items:
-                                    $ref: "#/components/schemas/HospitalResponse"
+                                    $ref: "#/components/schemas/Hospital"
+                "400":
+                    description: You give not numbers.
+                "401":
+                    description: Unauthorized.
 
         post:
             summary: Create a new hospital
@@ -59,6 +63,8 @@ paths:
                     description: Invalid input.
                 "401":
                     description: Unauthorized.
+                "403":
+                    description: You are not admin.
 
     /api/Hospitals/{id}:
         get:
@@ -81,7 +87,11 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: "#/components/schemas/HospitalResponse"
+                                $ref: "#/components/schemas/Hospital"
+                "400":
+                    description: id isn't number
+                "401":
+                    description: Unauthorized.
                 "404":
                     description: Hospital not found.
 
@@ -112,6 +122,8 @@ paths:
                     description: Invalid input.
                 "401":
                     description: Unauthorized.
+                "403":
+                    description: You are not admin.
 
         delete:
             summary: Soft delete hospital by ID
@@ -130,8 +142,12 @@ paths:
             responses:
                 "200":
                     description: Hospital deleted successfully.
+                "400":
+                    description: Id is not integer
                 "401":
                     description: Unauthorized.
+                "403":
+                    description: You are not admin.
 
     /api/Hospitals/{id}/Rooms:
         get:
@@ -157,6 +173,11 @@ paths:
                                 type: array
                                 items:
                                     type: string
+                                    example: rooms
+                "400":
+                    description: Id is not integer
+                "401":
+                    description: Unauthorized.
                 "404":
                     description: Hospital not found.
 
@@ -168,24 +189,13 @@ paths:
                 - Hospitals
             security:
                 - cookieAuth: []
-            parameters:
-                - name: room
-                  in: query
-                  required: true
-                  schema:
-                      type: string
-                  description: The name of the room.
-                - name: idHospital
-                  in: query
-                  required: true
-                  schema:
-                      type: integer
-                  description: The ID of the hospital.
             responses:
                 "200":
                     description: Room exists in the hospital.
                 "400":
                     description: Bad request, invalid parameters.
+                "401":
+                    description: Unauthorized.
                 "404":
                     description: Room or hospital not found.
 
@@ -200,24 +210,9 @@ components:
         Hospital:
             type: object
             properties:
-                Name:
-                    type: string
-                    description: Name of the hospital.
-                Address:
-                    type: string
-                    description: Address of the hospital.
-                ContactPhone:
-                    type: string
-                    description: Contact phone number for the hospital.
-                Rooms:
-                    type: array
-                    items:
-                        type: string
-                    description: List of rooms in the hospital.
-
-        HospitalResponse:
-            type: object
-            properties:
+                id:
+                    type: integer
+                    description: Id of hospital
                 name:
                     type: string
                     description: Name of the hospital.
