# hospital-microservice/internal/handler/hospitals_handler.go
@@ -1,7 +1,6 @@
 package handler
 
 import (
-	"fmt"
 	"net/http"
 	"strconv"
 	"strings"
@@ -11,35 +10,47 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-type HospitalsResponse struct {
-	Name string
-}
-
 func GetInfoAllHospitals() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		//get data form query
 		from := c.Query("from")
+		if from == "" {
+			from = "0" //если пусто будет по умолчанию 0 => c самого начала
+		}
 		count := c.Query("count")
-		fromI, _ := strconv.Atoi(from)
-		countI, _ := strconv.Atoi(count)
+		if count == "" {
+			count = "10" //если пусто будет по умолчанию 10
+		}
+		fromI, err := strconv.Atoi(from)
+		if err != nil {
+			c.AbortWithStatus(http.StatusBadRequest)
+			return
+		}
+		countI, err := strconv.Atoi(count)
+		if err != nil {
+			c.AbortWithStatus(http.StatusBadRequest)
+			return
+		}
 
 		userRepo := database.NewGormUserRepository()
 		hospitals := database.GetListHospitals(userRepo, fromI, countI)
-		var responseSlice []HospitalsResponse
-		for _, hospital := range hospitals {
-			responseSlice = append(responseSlice, HospitalsResponse{
-				Name: hospital.Name,
-			})
-		}
-		c.JSON(http.StatusOK, responseSlice)
+		c.JSON(http.StatusOK, hospitals)
 	}
 }
 
 func GetInfoHospitalByID() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		idHospital := c.Param("id")
+		if _, err := strconv.Atoi(idHospital); err != nil {
+			c.AbortWithStatus(http.StatusBadRequest)
+			return
+		}
 		userRepo := database.NewGormUserRepository()
 		hospital := database.GetInfoHospitalByID(userRepo, idHospital)
+		if hospital.Name == "" {
+			c.AbortWithStatus(http.StatusNotFound)
+			return
+		}
 		c.JSON(http.StatusOK, gin.H{
 			"name":         hospital.Name,
 			"address":      hospital.Address,
@@ -51,8 +62,18 @@ func GetInfoHospitalByID() gin.HandlerFunc {
 func GetListRoomsInHospitalByID() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		idHospital := c.Param("id")
+		if _, err := strconv.Atoi(idHospital); err != nil {
+			c.AbortWithStatus(http.StatusBadRequest)
+			return
+		}
 		userRepo := database.NewGormUserRepository()
 		hospital := database.GetInfoHospitalByID(userRepo, idHospital)
+
+		if hospital.Name == "" {
+			c.AbortWithStatus(http.StatusNotFound)
+			return
+		}
+
 		c.JSON(http.StatusOK, gin.H{
 			"rooms": hospital.Rooms,
 		})
@@ -65,7 +86,7 @@ func CreateNewHospitalByAdmin() gin.HandlerFunc {
 		//only for admin
 		roles := service.Authorization(c)
 		if !strings.Contains(roles, "admin") {
-			c.AbortWithStatus(http.StatusUnauthorized)
+			c.AbortWithStatus(http.StatusForbidden)
 			return
 		}
 		var jsonInput database.Hospital
@@ -87,7 +108,7 @@ func UpdateHospitalByAdmin() gin.HandlerFunc {
 		//only for admin
 		roles := service.Authorization(c)
 		if !strings.Contains(roles, "admin") {
-			c.AbortWithStatus(http.StatusUnauthorized)
+			c.AbortWithStatus(http.StatusForbidden)
 			return
 		}
 		//get data from request
@@ -111,11 +132,17 @@ func SoftDeleteHospitalByAdmin() gin.HandlerFunc {
 		//only for admin
 		roles := service.Authorization(c)
 		if !strings.Contains(roles, "admin") {
-			c.AbortWithStatus(http.StatusUnauthorized)
+			c.AbortWithStatus(http.StatusForbidden)
 			return
 		}
 		//Get ID for soft delete
 		idHospital := c.Param("id")
+		_, err := strconv.Atoi(idHospital)
+		if err != nil {
+			c.AbortWithStatus(http.StatusBadRequest)
+			return
+		}
+
 		userRepo := database.NewGormUserRepository()
 		database.SoftDeleteByAdmin(userRepo, idHospital)
 		c.JSON(http.StatusOK, gin.H{
@@ -131,7 +158,6 @@ func CheckExistRoomInHospital() gin.HandlerFunc {
 			c.AbortWithStatus(http.StatusBadRequest)
 			return
 		}
-		fmt.Println("ROOOOOOOOOOOOOm: ", room)
 		idHospital, err := c.Cookie("idHospital")
 		if err != nil {
 			c.AbortWithStatus(http.StatusBadRequest)
@@ -140,7 +166,7 @@ func CheckExistRoomInHospital() gin.HandlerFunc {
 		userRepo := database.NewGormUserRepository()
 		hospitalWithRoomExist := database.CheckExistRoomInHospitalID(userRepo, room, idHospital)
 		if !hospitalWithRoomExist {
-			c.AbortWithStatus(http.StatusBadRequest)
+			c.AbortWithStatus(http.StatusNotFound)
 		}
 		c.AbortWithStatus(http.StatusOK)
 	}
